# sem6_lab1

./: CMakeLists.txt  Dockerfile  Makefile  README.md  main.cpp
include/numeric/: derivative.hpp  funcOps.hpp  functional.hpp  linSystems.hpp  polynomials.hpp  quadrature.hpp  solveDU.hpp
src/: derivative.cpp  functional.cpp  linSystems.cpp  polynomials.cpp  quadrature.cpp  solveDU.cpp
tests/: jacobi.py  linSystems.py  test_derivative.cpp  test_funcOps.cpp  test_functional.cpp  test_linSystems.cpp  test_polynomials.cpp  test_solveDU.cpp
